# CSynth

./: .gitignore  README.md  index.html  package.json
.github/workflows/: publish.yaml
application/api/: Cargo.toml  roleflux_web.db
application/api/src/: ai.rs  db.rs  main.rs
application/api/src/handlers/: compiler.rs  cover_letters.rs  inbox.rs  jobs.rs  mod.rs  pdf.rs  resumes.rs  settings.rs
extentions/: PRIVACY.md  privacy.txt
extentions/chrome/: background.js  content.js  manifest.json  popup.html  popup.js  rules.chrome
extentions/firefox/: background.js  content.js  manifest.json  popup.html  popup.js  rules.firefox
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  db.rs  lib.rs  main.rs  server.rs
src-tauri/src/commands/: compiler.rs  cover_letters.rs  data.rs  downloads.rs  inbox.rs  jobs.rs  mod.rs  pdf.rs  resumes.rs  settings.rs
src/components/: AboutTab.vue  CompilerTab.vue  CoverLetterDetailView.vue  CoverLettersTab.vue  CustomDialog.vue  DiagramTab.vue  FileTreeItem.vue  HomeTab.vue  InboxTab.vue  JobDetailView.vue  JobParserView.vue  JobsTab.vue  ResumeDetailView.vue  ResumesTab.vue  SettingsTab.vue  Titlebar.vue
src/router/: index.ts
src/store/: inbox.ts  jobs.ts  resumes.ts  settings.ts
